--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,19 @@ body {
   height: 1px;
   overflow: hidden;
 }
-.logo-block {
+.image-block {
   display: flex;
+}
+.button {
+  background-color: hsl(231, 69%, 60%);
+  color: #ffffff;
+  font-family: 'Rubik', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  border: 2px solid hsl(231, 69%, 60%);
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 /* Common menu styles for header and footer nav bar */
 .menu {
@@ -57,6 +68,30 @@ body {
 .header__menu__link__button:focus {
   color: hsl(0, 94%, 66%);
   background: #ffffff;
+}
+/* Intro Section */
+.intro {
+  display: flex;
+  padding: 50px 75px 50px 150px;
+  align-items: center;
+}
+.intro__title {
+  color: hsl(229, 31%, 21%);
+  font-weight: 500;
+  font-size: 48px;
+  margin: 0;
+}
+.intro__paragraph {
+  color: hsl(229, 8%, 60%);
+  padding-right: 20px;
+  line-height: 1.5;
+  margin: 20px 0 30px;
+}
+.intro__firefox-button {
+  background-color: hsl(0, 0%, 93%);
+  color: hsl(229, 31%, 21%);
+  border: 2px solid hsl(0, 0%, 93%);
+  margin-left: 10px;
 }
 /* Footer Section */
 .footer {
