--- a/css/style.css
+++ b/css/style.css
@@ -76,9 +76,13 @@ body {
 }
 /* Intro Section */
 .intro {
+  position: relative;
   display: flex;
   padding: 50px 75px 50px 150px;
   align-items: center;
+}
+.intro__text-block {
+  flex: 1 1 0;
 }
 .intro__title {
   color: hsl(229, 31%, 21%);
@@ -90,7 +94,7 @@ body {
   color: hsl(229, 8%, 60%);
   padding-right: 20px;
   line-height: 1.5;
-  margin: 20px 0 30px;
+  margin: 20px 70px 30px 0;
 }
 .intro__firefox-button {
   background-color: hsl(0, 0%, 93%);
@@ -102,6 +106,22 @@ body {
 .intro__firefox-button:focus {
   background-color: #ffffff;
   border: 2px solid hsl(229, 31%, 21%);
+}
+.intro__image-block {
+  flex: 1 1 0;
+}
+.intro__image {
+  width: 100%;
+}
+.background-blue-block-right {
+  height: 350px;
+  width: 34vw;
+  background: hsl(231, 69%, 60%);
+  border-bottom-left-radius: 40%;
+  position: absolute;
+  right: 0;
+  bottom: 25px;
+  z-index: -1;
 }
 /* Footer Section */
 .footer {
