--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,51 @@ body {
   bottom: 25px;
   z-index: -1;
 }
+/* Contact Section */
+.contact {
+  background: hsl(231, 69%, 60%);
+  color: #ffffff;
+  text-align: center;
+  padding: 50px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+.contact > * {
+  grid-column: 2;
+}
+.contact__paragraph {
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+.contact__title {
+  font-weight: 500;
+  font-size: 34px;
+  padding: 0 75px;
+}
+.contact__input {
+  color: hsl(229, 31%, 21%);
+  background: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  box-sizing: border-box;
+  width: 24vw;
+  margin-right: 10px;
+}
+.contact__submit-button {
+  color: #ffffff;
+  background: hsl(0, 94%, 66%);
+  border: 2px solid hsl(0, 94%, 66%);
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+}
+
 /* Footer Section */
 .footer {
   background-color: hsl(229, 31%, 21%);
