--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ body {
 }
 /* Features section */
 .features {
-  padding: 50px 150px;
+  padding: 50px 150px 100px;
+  position: relative;
 }
 .features__intro {
   text-align: center;
@@ -162,21 +163,28 @@ body {
   padding: 25px 50px;
   cursor: pointer;
 }
+.features__button:hover,
+.features__button:focus {
+  color: hsl(0, 94%, 66%);
+}
 .features__current-button {
   color: hsl(229, 31%, 21%);
   border-bottom: 1px solid hsl(0, 94%, 66%);
   box-shadow: inset 0 -5px 0 hsl(0, 94%, 66%);
 }
+.features__current-button:hover,
+.features__current-button:focus {
+  color: hsl(229, 31%, 21%);
+}
 .features__facts {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
 }
 .features__fact {
   grid-column: 1;
   grid-row: 1;
   display: none;
-  grid-template-columns: 570px 1fr;
+  grid-template-columns: 40vw 1fr;
   grid-gap: 125px;
   align-items: center;
 }
@@ -195,6 +203,16 @@ body {
 .features__fact__paragraph {
   color: hsl(229, 8%, 60%);
   margin: 25px 0;
+}
+.background-blue-block-left {
+  height: 390px;
+  width: 44vw;
+  background: hsl(231, 69%, 60%);
+  border-bottom-right-radius: 40%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
 }
 /* Contact Section */
 .contact {
