--- a/css/style.css
+++ b/css/style.css
@@ -504,11 +504,20 @@ body {
     height: 100vh;
     z-index: 2;
   }
+  .header {
+    padding: 50px 25px 25px;
+  }
   .header__container.open {
     background: rgba(37, 43, 70, 0.9);
   }
-  .header {
-    padding: 50px 25px 25px;
+  .header__container.open .image-block svg path {
+    fill: #ffffff;
+  }
+  .header__container.open .image-block svg circle {
+    fill: #ffffff;
+  }
+  .header__container.open .image-block svg circle + path {
+    fill: #252b46;
   }
   .header__mobile-menu__button {
     display: block;
@@ -562,7 +571,6 @@ body {
     bottom: 50px;
     left: 0;
     list-style: none;
-    display: flex;
     justify-content: center;
     padding: 0;
     margin: 0;
@@ -575,15 +583,6 @@ body {
   .header__mobile__social-link svg:hover path,
   .header__mobile__social-link:focus svg path {
     fill: hsl(0, 94%, 66%);
-  }
-  .header__container.open svg path {
-    fill: #ffffff;
-  }
-  .header__container.open svg circle {
-    fill: #ffffff;
-  }
-  .header__container.open svg circle + path {
-    fill: #252b46;
   }
   /* Intro Section */
   .intro {
